--- a/serverless.yml
+++ b/serverless.yml
@@ -11,7 +11,9 @@
 #
 # Happy Coding!
 
-service: expenses # NOTE: update this with your service name
+service: ${self:custom.environment.service}
+app: ${self:custom.environment.app}
+tenant: ${self:custom.environment.tenant}
 
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
@@ -23,8 +25,8 @@ provider:
   runtime: go1.x
 
 # you can overwrite defaults here
-#  stage: dev
-#  region: us-east-1
+  stage: dev
+#  region: eu-west-1
 
 # you can add statements to the Lambda function's IAM Role here
 #  iamRoleStatements:
@@ -42,9 +44,32 @@ provider:
 #            - "Ref" : "ServerlessDeploymentBucket"
 #            - "/*"
 
+  # Allow IAM role to publish to the SNS topic
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - SNS:Publish
+      Resource: ${self:custom.snsTopicArn}
 # you can define service wide environment variables here
 #  environment:
 #    variable1: value1
+
+plugins:
+  - serverless-domain-manager
+  - serverless-plugin-lambda-dead-letter
+
+custom:
+  environment: ${file(env.yml)}
+  customDomain:
+    domainName: ${self:custom.environment.domainName}
+    basePath: ''
+    stage: ${self:provider.stage}
+    createRoute53Record: true
+
+  # SNS/SQS configuration
+  snsTopic: "${self:service}-${self:provider.stage}-expense-created"
+  snsTopicArn: { "Fn::Join" : ["", ["arn:aws:sns:${self:provider.region}:", { "Ref" : "AWS::AccountId" }, ":${self:custom.snsTopic}" ] ]  }
+  sqsToshlDLQ: "${self:custom.snsTopic}-toshl-dlq"
 
 package:
  exclude:
@@ -53,61 +78,22 @@ package:
    - ./bin/**
 
 functions:
-  hello:
-    handler: bin/hello
+  monzo:
+    handler: bin/monzo
     events:
       - http:
-          path: hello
-          method: get
-  world:
-    handler: bin/world
+          path: api/v1/create
+          method: post
+    environment:
+      snsTopicArn: ${self:custom.snsTopicArn}
+
+  toshl:
+    handler: bin/toshl
     events:
-      - http:
-          path: world
-          method: get
+      - sns: ${self:custom.snsTopic}
+    deadLetter:
+      sqs: ${self:custom.sqsToshlDLQ}
+    environment:
+      snsTopicArn: ${self:custom.snsTopicArn}
+      token: ${ssm:/${self:service}/ToshlToken~true}
 
-#    The following are a few example events you can configure
-#    NOTE: Please make sure to change your handler code to work with those events
-#    Check the event documentation for details
-# events:
-#    events:
-#      - http:
-#          path: users/create
-#          method: get
-#      - s3: ${env:BUCKET}
-#      - schedule: rate(10 minutes)
-#      - sns: greeter-topic
-#      - stream: arn:aws:dynamodb:region:XXXXXX:table/foo/stream/1970-01-01T00:00:00.000
-#      - alexaSkill: amzn1.ask.skill.xx-xx-xx-xx
-#      - alexaSmartHome: amzn1.ask.skill.xx-xx-xx-xx
-#      - iot:
-#          sql: "SELECT * FROM 'some_topic'"
-#      - cloudwatchEvent:
-#          event:
-#            source:
-#              - "aws.ec2"
-#            detail-type:
-#              - "EC2 Instance State-change Notification"
-#            detail:
-#              state:
-#                - pending
-#      - cloudwatchLog: '/aws/lambda/hello'
-#      - cognitoUserPool:
-#          pool: MyUserPool
-#          trigger: PreSignUp
-
-#    Define function environment variables here
-#    environment:
-#      variable2: value2
-
-# you can add CloudFormation resource templates here
-#resources:
-#  Resources:
-#    NewResource:
-#      Type: AWS::S3::Bucket
-#      Properties:
-#        BucketName: my-new-bucket
-#  Outputs:
-#     NewOutput:
-#       Description: "Description for the output"
-#       Value: "Some output value"
