--- a/serverless.yml
+++ b/serverless.yml
@@ -101,3 +101,4 @@ functions:
     environment:
       snsTopicArn: ${self:custom.snsTopicArn}
       token: ${ssm:/${self:service}/ToshlToken~true}
+      accountId: ${ssm:/${self:service}/ToshlAccountId}
