--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,10 +43,18 @@ jobs:
       - run: make test
 
       - run:
-          name: prepare deploy
+          name: create env.yml
           command: |
             echo "service: $SERVICE" >> env.yml
             echo "app: $APP" >> env.yml
             echo "tenant: $TENANT" >> env.yml
             echo "domainName: $DOMAIN_NAME" >> env.yml
-            cat env.yml
+
+      - run:
+          name: install serverless
+          command: |
+            curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
+            sudo apt-get install -y nodejs
+            sudo npm install serverless -g
+            sudo npm install serverless-domain-manager
+            sudo npm install serverless-plugin-lambda-dead-letter
